[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonrpcproxy"
version = "0.5"
description = "Damn simple JSON-RPC client"
readme = "README.md"
requires-python = ">=3.8, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*"
license = {text = "BSD License"}
keywords = ["web", "json", "rpc", "python"]
authors = [
  { name = "Marcin Nowak", email = "marcin.j.nowak@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=1.2.3, <3.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ipdb",
    "pytest",
    "build",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/marcinn/jsonrpcproxy"

[tool.setuptools.packages]
find = {}
